2014-07-17  Lucas Forschler  <lforschler@apple.com>

        Rollout r171167. <rdar://problem/17716602>

2014-07-16  Alexey Proskuryakov  <ap@apple.com>

        A test that hangs at cleanup stage confuses webkitpy hugely
        https://bugs.webkit.org/show_bug.cgi?id=122475
        <rdar://problem/17184354>

        Reviewed by Anders Carlsson.

        Terminate WebContent process if it freezes between tests. Ideally, we should report
        this somehow, but this is better than blaming the wrong test.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::terminateWebContentProcess):
        * WebKitTestRunner/TestController.h:
        * WebKitTestRunner/TestInvocation.cpp: (WTR::TestInvocation::invoke):

2014-07-16  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Change style check path with EFL WK2's path in checker_unittest.py
        https://bugs.webkit.org/show_bug.cgi?id=134967

        Reviewed by Csaba Osztrogonác.

        * Scripts/webkitpy/style/checker_unittest.py: Change ewk_view.h path.
        (GlobalVariablesTest.test_path_rules_specifier):

2014-07-16  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        Unreviewed. Added myself to the list of committers.

        * Scripts/webkitpy/common/config/contributors.json:

2014-07-15  Ryuan Choi  <ryuan.choi@samsung.com>

        [EFL] Remove EFL WK1 directory from the checker.py
        https://bugs.webkit.org/show_bug.cgi?id=134954

        Reviewed by Gyuyoung Kim.

        * Scripts/webkitpy/style/checker.py:

2014-07-15  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        Adding myself to contributors.json breaks a webkitpy test
        https://bugs.webkit.org/show_bug.cgi?id=134958

        Reviewed by Ryosuke Niwa.

        * Scripts/webkitpy/tool/bot/irc_command_unittest.py:
        (IRCCommandTest.test_whois): Be more specific and include also the
        first name when asking for the whois of Xan in the unit test.
