@@ -42,6 +42,7 @@
 #if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
     self.window.styleMask |= NSFullSizeContentViewWindowMask;
 #endif
+    [self.window.contentView setWantsLayer:YES];
 
     [super windowDidLoad];
 }
